# Ustr

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Ustr.md
src/: main.cc  test.cc  test.h  unicode_script.cc  unicode_script.h  unicode_script_map.h  ustr.cc  ustr.h  ustr_test.cc
